# Environment-Controller

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
data/: mqtt_client.py  mqtt_plotter.p
main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  idf_component.yml  mqtt.c  mqtt.h  screen.c  screen.h  utils.h
main/led/: led.c  led.h
main/periphs/: pcf.c  pcf.h  pcf8574.c  pcf8574.h  periphs.c  periphs.h  sht31.c  sht31.h
main/wifi/: wifi.c  wifi.h
mqtt-server/: acl.conf  compose.yaml  mosquitto.conf
